<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary_color"
    tools:context="pl.kosteklvp.bbbk_v2.LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="160dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="41dp"
        android:contentDescription="@string/todo"
        app:srcCompat="@drawable/logo" />

    //Imie
    <EditText
        android:id="@+id/firstNameField"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_below="@+id/textView3"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:background="#11000000"
        android:ems="10"
        android:paddingLeft="8dp"
        android:hint="@string/imie"
        android:inputType="textPersonName" />

    //Nazwisko
    <EditText
        android:id="@+id/lastNameField"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_alignLeft="@+id/firstNameField"
        android:layout_alignStart="@+id/firstNameField"
        android:layout_below="@+id/firstNameField"
        android:layout_marginTop="8dp"
        android:background="#11000000"
        android:ems="10"
        android:paddingLeft="8dp"
        android:hint="@string/nazwisko"
        android:inputType="textPersonName" />

    //Email

    <EditText
        android:id="@+id/emailField"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_alignLeft="@+id/lastNameField"
        android:layout_alignStart="@+id/lastNameField"
        android:layout_below="@+id/lastNameField"
        android:background="#11000000"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:paddingLeft="8dp"
        android:hint="Email"
        android:inputType="textPersonName" />

    //haslo

    <EditText
        android:id="@+id/passwordField"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_alignLeft="@+id/emailField"
        android:layout_alignStart="@+id/emailField"
        android:layout_below="@+id/emailField"
        android:background="#11000000"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:paddingLeft="8dp"
        android:hint="@string/haslo"
        android:inputType="textPassword" />

    //potwierdz haslo

    <EditText
        android:id="@+id/passwordField2"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_alignLeft="@+id/passwordField"
        android:layout_alignStart="@+id/passwordField"
        android:layout_below="@+id/passwordField"
        android:background="#11000000"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:paddingLeft="8dp"
        android:hint="@string/haslo2"
        android:inputType="textPassword" />

    <android.support.v7.widget.CardView
        android:id="@+id/cardViewBack"
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_alignLeft="@+id/passwordField2"
        android:layout_alignStart="@+id/passwordField2"
        android:layout_below="@+id/passwordField2"
        android:layout_marginTop="20dp"
        app:cardBackgroundColor="@color/secondary_color"
        app:cardCornerRadius="16dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/zarejestruj"
                android:textColor="@color/primary_color"
                android:textSize="22sp"
                android:textStyle="bold" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:text="Rejestracja"
        android:textColor="@color/secondary_color"
        android:textSize="30sp"
        android:id="@+id/textView3" />

</RelativeLayout>
