<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/orange"
    tools:context="pl.kosteklvp.bbbk_v2.LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="216dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="86dp"
        app:srcCompat="@drawable/logo" android:contentDescription="@string/todo" />

    <EditText
        android:id="@+id/loginField"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_below="@+id/imageView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:background="#11000000"
        android:drawableLeft="@mipmap/ic_mail"
        android:drawablePadding="-5dp"
        android:drawableStart="@mipmap/ic_mail"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/passwordField"
        android:layout_width="300dp"
        android:layout_height="40dp"
        android:layout_alignLeft="@+id/loginField"
        android:layout_alignStart="@+id/loginField"
        android:layout_below="@+id/loginField"
        android:layout_marginTop="24dp"
        android:background="#11000000"
        android:drawableLeft="@mipmap/ic_lock"
        android:drawablePadding="-5dp"
        android:drawableStart="@mipmap/ic_lock"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <android.support.v7.widget.CardView
        android:layout_width="300dp"
        android:layout_height="60dp"
        android:layout_alignLeft="@+id/passwordField"
        android:layout_alignStart="@+id/passwordField"
        android:layout_below="@+id/passwordField"
        android:layout_marginTop="24dp"
        app:cardCornerRadius="16dp"
        app:cardBackgroundColor="@color/blue"
        android:id="@+id/cardView">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="Zaloguj"
                android:textColor="@color/orange"
                android:textSize="22sp"
                android:textStyle="bold" />
        </RelativeLayout>
    </android.support.v7.widget.CardView>

    <TextView
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cardView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="13dp"
        android:text="Rejestracja"
        android:textColor="@color/blue"
        android:textSize="16dp" />

    <TextView
        android:id="@+id/lost_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp"
        android:text="Odzyskiwanie hasła"
        android:textColor="@color/blue"
        android:textSize="16dp" />
</RelativeLayout>
